COMPILADOR/src/c_ast_descendente/ConstructorASTsTiny.java
/* Generated By:JavaCC: Do not edit this line. ConstructorASTsTiny.java */
package c_ast_descendente;
import asint.ClaseSemanticaTiny;
import asint.SintaxisAbstractaTiny.Prog;
import asint.SintaxisAbstractaTiny.Blo;
import asint.SintaxisAbstractaTiny.Decs;
import asint.SintaxisAbstractaTiny.LDecs;
import asint.SintaxisAbstractaTiny.LVar;
import asint.SintaxisAbstractaTiny.Var;
import asint.SintaxisAbstractaTiny.Dec;
import asint.SintaxisAbstractaTiny.Tipo;
import asint.SintaxisAbstractaTiny.Insts;
import asint.SintaxisAbstractaTiny.LInst;
import asint.SintaxisAbstractaTiny.PFmls;
import asint.SintaxisAbstractaTiny.LPFml;
import asint.SintaxisAbstractaTiny.PFml;
import asint.SintaxisAbstractaTiny.PReales;
import asint.SintaxisAbstractaTiny.LPReal;
import asint.SintaxisAbstractaTiny.Inst;
import asint.SintaxisAbstractaTiny.Exp;
import c_ast_ascendente.UnidadLexica.StringLocalizado;

public class ConstructorASTsTiny implements ConstructorASTsTinyConstants {
   private ClaseSemanticaTiny sem = new ClaseSemanticaTiny();

  final public Prog analiza() throws ParseException {
    trace_call("analiza");
    try {
       Prog prog;
      prog = programa();
      jj_consume_token(0);
             {if (true) return prog;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("analiza");
    }
  }

  final public Prog programa() throws ParseException {
    trace_call("programa");
    try {
     Blo bloq;
      bloq = bloq();
           {if (true) return sem.prog(bloq);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("programa");
    }
  }

  final public Blo bloq() throws ParseException {
    trace_call("bloq");
    try {
      Insts insts; Decs decs;
      jj_consume_token(llaveAp);
      decs = declaraciones();
      insts = instrucciones();
      jj_consume_token(llaveCi);
            {if (true) return sem.bloq(decs, insts);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("bloq");
    }
  }

  final public Decs declaraciones() throws ParseException {
    trace_call("declaraciones");
    try {
       LDecs decs;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case bool:
      case INT:
      case real:
      case string:
      case proc:
      case struct:
      case type:
      case iden:
      case indireccion:
        decs = lista_declaraciones();
        jj_consume_token(FINAL);
            {if (true) return sem.si_decs(decs);}
        break;
      default:
        jj_la1[0] = jj_gen;
            {if (true) return sem.no_decs();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaraciones");
    }
  }

  final public LDecs lista_declaraciones() throws ParseException {
    trace_call("lista_declaraciones");
    try {
        Dec dec; LDecs decs;
      dec = declaracion();
      decs = rlista_decs(sem.una_dec(dec));
            {if (true) return decs;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_declaraciones");
    }
  }

  final public LDecs rlista_decs(LDecs decsh) throws ParseException {
    trace_call("rlista_decs");
    try {
        Dec dec; LDecs decs;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case puntoYComa:
        jj_consume_token(puntoYComa);
        dec = declaracion();
        decs = rlista_decs(sem.muchas_decs(decsh,dec));
            {if (true) return decs;}
        break;
      default:
        jj_la1[1] = jj_gen;
            {if (true) return decsh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("rlista_decs");
    }
  }

  final public LVar lista_variables() throws ParseException {
    trace_call("lista_variables");
    try {
        Var v; LVar vars;
      v = variable();
      vars = rlista_var(sem.una_var(v));
            {if (true) return vars;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_variables");
    }
  }

  final public LVar rlista_var(LVar varsh) throws ParseException {
    trace_call("rlista_var");
    try {
        Var v; LVar vars;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case coma:
        jj_consume_token(coma);
        v = variable();
        vars = rlista_var(sem.muchas_var(varsh,v));
            {if (true) return vars;}
        break;
      default:
        jj_la1[2] = jj_gen;
            {if (true) return varsh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("rlista_var");
    }
  }

  final public Var variable() throws ParseException {
    trace_call("variable");
    try {
         Tipo t; Token id;
      t = tipo();
      id = jj_consume_token(iden);
             {if (true) return (Var)sem.var(t,id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("variable");
    }
  }

  final public Dec declaracion() throws ParseException {
    trace_call("declaracion");
    try {
        Var v; Token id; PFmls pfmls; Blo bloq;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case bool:
      case INT:
      case real:
      case string:
      case struct:
      case iden:
      case indireccion:
        v = variable();
           {if (true) return (Dec)sem.dec_simple(v);}
        break;
      case type:
        jj_consume_token(type);
        v = variable();
           {if (true) return (Dec)sem.dec_type(v);}
        break;
      case proc:
        jj_consume_token(proc);
        id = jj_consume_token(iden);
        pfmls = par_formales();
        bloq = bloq();
           {if (true) return (Dec)sem.dec_proc(id.image, pfmls, bloq).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaracion");
    }
  }

  final public Tipo tipo() throws ParseException {
    trace_call("tipo");
    try {
            Tipo tip2, tiparray;
      tip2 = tipo2();
      tiparray = rtipo(tip2);
                   {if (true) return tiparray;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo");
    }
  }

  final public Tipo rtipo(Tipo tiph) throws ParseException {
    trace_call("rtipo");
    try {
            Token lent; Tipo tip;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case corcheteAp:
        jj_consume_token(corcheteAp);
        lent = jj_consume_token(literalEntero);
        jj_consume_token(corcheteCi);
        tip = rtipo((Tipo)sem.tipo_array(tiph, lent.image).ponFila(lent.beginLine).ponCol(lent.beginColumn));
                    {if (true) return tip;}
        break;
      default:
        jj_la1[4] = jj_gen;
            {if (true) return tiph;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("rtipo");
    }
  }

  final public Tipo tipo2() throws ParseException {
    trace_call("tipo2");
    try {
            Tipo tip;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case indireccion:
        jj_consume_token(indireccion);
        tip = tipo2();
                   {if (true) return (Tipo)sem.tipo_punt(tip);}
        break;
      case bool:
      case INT:
      case real:
      case string:
      case struct:
      case iden:
        tip = tipo3();
                   {if (true) return tip;}
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo2");
    }
  }

  final public Tipo tipo3() throws ParseException {
    trace_call("tipo3");
    try {
            Token tok; LVar vars;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case bool:
        tok = jj_consume_token(bool);
                   {if (true) return (Tipo)sem.tipo_bool();}
        break;
      case INT:
        tok = jj_consume_token(INT);
                   {if (true) return (Tipo)sem.tipo_int();}
        break;
      case real:
        tok = jj_consume_token(real);
                   {if (true) return (Tipo)sem.tipo_real();}
        break;
      case string:
        tok = jj_consume_token(string);
                   {if (true) return (Tipo)sem.tipo_string();}
        break;
      case iden:
        tok = jj_consume_token(iden);
                   {if (true) return (Tipo)sem.tipo_ident(tok.image).ponFila(tok.beginLine).ponCol(tok.beginColumn);}
        break;
      case struct:
        tok = jj_consume_token(struct);
        jj_consume_token(llaveAp);
        vars = lista_variables();
        jj_consume_token(llaveCi);
                   {if (true) return (Tipo)sem.tipo_struct(vars);}
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo3");
    }
  }

  final public Insts instrucciones() throws ParseException {
    trace_call("instrucciones");
    try {
        LInst insts;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case NEW:
      case delete:
      case read:
      case write:
      case nl:
      case call:
      case arroba:
      case llaveAp:
        insts = lista_instrucciones();
            {if (true) return (Insts)sem.si_inst(insts);}
        break;
      default:
        jj_la1[7] = jj_gen;
            {if (true) return (Insts)sem.no_inst();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("instrucciones");
    }
  }

  final public LInst lista_instrucciones() throws ParseException {
    trace_call("lista_instrucciones");
    try {
        Inst inst; LInst insts;
      inst = instruccion();
      insts = rlista_inst(sem.una_inst(inst));
            {if (true) return insts;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_instrucciones");
    }
  }

  final public LInst rlista_inst(LInst instsh) throws ParseException {
    trace_call("rlista_inst");
    try {
        Inst inst; LInst insts;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case puntoYComa:
        jj_consume_token(puntoYComa);
        inst = instruccion();
        insts = rlista_inst(sem.muchas_inst(instsh,inst));
            {if (true) return insts;}
        break;
      default:
        jj_la1[8] = jj_gen;
            {if (true) return instsh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("rlista_inst");
    }
  }

  final public PFmls par_formales() throws ParseException {
    trace_call("par_formales");
    try {
        PFmls pfmls;
      jj_consume_token(parentesisAp);
      pfmls = rpar_formales();
            {if (true) return pfmls;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("par_formales");
    }
  }

  final public PFmls rpar_formales() throws ParseException {
    trace_call("rpar_formales");
    try {
        LPFml pfmls;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case bool:
      case INT:
      case real:
      case string:
      case struct:
      case iden:
      case indireccion:
        pfmls = lista_par_formal();
        jj_consume_token(parentesisCi);
            {if (true) return (PFmls)sem.si_pformal(pfmls);}
        break;
      case parentesisCi:
        jj_consume_token(parentesisCi);
            {if (true) return (PFmls)sem.no_pformal();}
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("rpar_formales");
    }
  }

  final public LPFml lista_par_formal() throws ParseException {
    trace_call("lista_par_formal");
    try {
        PFml pfml; LPFml pfmls;
      pfml = par_formal();
      pfmls = rlista_par_formal(sem.un_pformal(pfml));
            {if (true) return pfmls;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_par_formal");
    }
  }

  final public LPFml rlista_par_formal(LPFml pfmlsh) throws ParseException {
    trace_call("rlista_par_formal");
    try {
        PFml pfml; LPFml pfmls;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case coma:
        jj_consume_token(coma);
        pfml = par_formal();
        pfmls = rlista_par_formal(sem.muchos_pformal(pfml, pfmlsh));
            {if (true) return pfmls;}
        break;
      default:
        jj_la1[10] = jj_gen;
            {if (true) return pfmlsh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("rlista_par_formal");
    }
  }

  final public PFml par_formal() throws ParseException {
    trace_call("par_formal");
    try {
            Tipo tipo; PFml lpfml; Token id;
      tipo = tipo();
      lpfml = rpar_formal(tipo);
              {if (true) return lpfml;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("par_formal");
    }
  }

  final public PFml rpar_formal(Tipo t) throws ParseException {
    trace_call("rpar_formal");
    try {
            Token id;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case porReferencia:
        jj_consume_token(porReferencia);
        id = jj_consume_token(iden);
              {if (true) return (PFml)sem.pformal_ref(t, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
      case iden:
        id = jj_consume_token(iden);
                  {if (true) return (PFml)sem.pformal_noref(t, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("rpar_formal");
    }
  }

  final public PReales par_reales() throws ParseException {
    trace_call("par_reales");
    try {
            PReales lpreal;
      jj_consume_token(parentesisAp);
      lpreal = rpar_reales();
              {if (true) return lpreal;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("par_reales");
    }
  }
